# dotfiles

./: .gitignore  configuration.nix  flake.nix  setup.md
dot/: default.nix  dot.cabal  hie.yaml
dot/app/: Main.hs
dot/src/: Dot.hs
dot/src/Dot/: Options.hs
dot/src/Dot/Link/: Types.hs
hosts/: common-configuration.nix
hosts/shuriken/: configuration.nix  hardware-configuration.nix
modules/: default.nix
modules/desktop/obsidian/: default.nix
modules/desktop/xmonad/: default.nix
modules/dev/haskell/: default.nix
modules/ide/vscode/: default.nix
modules/shell/git/: config  default.nix
secrets/: default.nix
secrets/user-passwords/: neru.asc  root.asc
